# lib/improoove_web/controllers/project_controller.ex
@@ -1,6 +1,7 @@
 defmodule ImproooveWeb.ProjectController do
   use ImproooveWeb, :controller
   use PhoenixSwagger
+  import Plug.Conn
 
   alias Improoove.Projects
   alias Improoove.Projects.Project
@@ -16,47 +17,56 @@ defmodule ImproooveWeb.ProjectController do
           description("Input Schema of project")
 
           properties do
-            uid(:string, "The ID of user", required: true)
             color(:string, "project main color", required: true)
             objective(:string, "goal of project", required: true)
-            end_date(:string, "when finish project", format: "ISO-8601")
-            start_date(:string, "when start project", format: "ISO-8601")
+            endDate(:string, "when finish project", format: "ISO-8601")
+            startDate(:string, "when start project", format: "ISO-8601")
             name(:string, "name of project", required: true)
           end
+          example %{
+            color: "#000000",
+            objective: "objective",
+            endDate: "2020-10-10T00:00:00Z",
+            startDate: "2020-10-01T00:00:00Z",
+            name: "name"
+          }
         end,
-
       UpdateProjectInput:
         swagger_schema do
           title("UpdateProjectInput")
           description("Update Schema of project")
 
           properties do
-            uid(:string, "The ID of user", required: true)
             color(:string, "project main color")
             objective(:string, "goal of project")
-            end_date(:string, "when finish project", format: "ISO-8601")
-            start_date(:string, "when start project", format: "ISO-8601")
+            endDate(:string, "when finish project", format: "ISO-8601")
+            startDate(:string, "when start project", format: "ISO-8601")
             name(:string, "name of project", required: true)
           end
+          example %{
+            color: "#000000",
+            objective: "objective",
+            endDate: "2020-10-10T00:00:00Z",
+            startDate: "2020-10-01T00:00:00Z",
+            name: "name"
+          }
         end,
-
       Project:
         swagger_schema do
           title("Project")
           description("")
 
           properties do
-            uid(:string, "The ID of user", required: true)
+            id(:integer, "The ID of project", required: true)
             color(:string, "project main color", required: true)
             objective(:string, "goal of project", required: true)
-            end_date(:string, "when finish project", format: "ISO-8601")
-            start_date(:string, "when start project", format: "ISO-8601")
+            endDate(:string, "when finish project", format: "ISO-8601")
+            startDate(:string, "when start project", format: "ISO-8601")
             name(:string, "name of project", required: true)
             logs(Schema.ref(:Stacks))
             feedbacks(Schema.ref(:Stacks))
           end
         end,
-
       Projects:
         swagger_schema do
           title("Projects")
@@ -68,8 +78,8 @@ defmodule ImproooveWeb.ProjectController do
   end
 
   defp make_project(%{id: id} = project) do
-    logs = Stacks.list_stacks(id, "LOG")
-    feedbacks = Stacks.list_stacks(id, "FEEDBACK")
+    logs = Stacks.list_stacks_by_project_id(id, "LOG")
+    feedbacks = Stacks.list_stacks_by_project_id(id, "FEEDBACK")
 
     project
     |> Map.put(:logs, logs)
@@ -77,25 +87,22 @@ defmodule ImproooveWeb.ProjectController do
   end
 
   swagger_path :index do
-    get("/api/project/index/{uid}")
+    get("/api/project/index")
     summary("Query for projects")
     description("Query for projects. This operation supports with paging and filtering")
     produces("application/json")
     tag("Project")
     operation_id("list_projects")
-    paging(size: "page_size", offset: "cursor")
-    parameters do
-      uid(:path, :string, "user ID", required: true)
-      page_size(:query, :integer, "page size")
-      cursor(:query, :integer, "cursor")
-    end
-
+    CommonParameters.authorization()
+    CommonParameters.pagination()
     response(200, "OK", Schema.ref(:Projects))
-    response(400, "Client Error")
+    response(400, "Bad Request")
+    response(404, "Not Found")
   end
 
-  def index(conn, %{"uid" => uid, "page_size" => page_size, "cursor" => cursor}) do
-    %{entries: entries, metadata: page_info} = Projects.list_projects(uid, page_size, cursor)
+  def index(conn, args) do
+    [uid] = get_req_header(conn, "authorization")
+    %{entries: entries, metadata: page_info} = Projects.list_projects(uid, args)
     projects = Enum.map(entries, fn project -> make_project(project) end)
     render(conn, "index.json", projects: projects, page_info: page_info)
   end
@@ -107,6 +114,7 @@ defmodule ImproooveWeb.ProjectController do
     produces("application/json")
     tag("Project")
     operation_id("create_project")
+    CommonParameters.authorization()
 
     parameters do
       project(:body, Schema.ref(:CreateProjectInput), "project attributes")
@@ -117,11 +125,13 @@ defmodule ImproooveWeb.ProjectController do
   end
 
   def create(conn, project_params) do
-    IO.inspect(project_params)
-    with {:ok, %Project{} = project} <- Projects.create_project(project_params) do
-      new_project = project
-      |> Map.put(:logs, [])
-      |> Map.put(:feedbacks, [])
+    [uid] = get_req_header(conn, "authorization")
+
+    with {:ok, %Project{} = project} <- Projects.create_project(uid, project_params) do
+      new_project =
+        project
+        |> Map.put(:logs, [])
+        |> Map.put(:feedbacks, [])
 
       conn
       |> put_status(:created)
@@ -137,6 +147,7 @@ defmodule ImproooveWeb.ProjectController do
     produces("application/json")
     tag("Project")
     operation_id("get_project!")
+    CommonParameters.authorization()
 
     parameters do
       id(:path, :string, "project ID", required: true)
@@ -147,20 +158,23 @@ defmodule ImproooveWeb.ProjectController do
   end
 
   def show(conn, %{"id" => id}) do
+    [uid] = get_req_header(conn, "authorization")
     project =
       Projects.get_project!(id)
       |> make_project
+      |> IO.inspect()
 
     render(conn, "show.json", project: project)
   end
 
   swagger_path :update do
-    patch("/api/project/{id}")
+    patch("/api/project/:id")
     summary("update project")
     description("update project. This operation supports updating")
     produces("application/json")
     tag("Project")
     operation_id("update_project")
+    CommonParameters.authorization()
 
     parameters do
       id(:path, :string, "project ID", required: true)
@@ -171,32 +185,34 @@ defmodule ImproooveWeb.ProjectController do
     response(422, "Validation Error")
   end
 
-  def update(conn, %{"id" => id, "project" => project_param}) do
-    {id, _} = Integer.parse(id)
+  def update(conn, %{"id" => id} = project_param) do
+    [uid] = get_req_header(conn, "authorization")
     project = Projects.get_project!(id)
 
-    with {:ok, %Project{} = project} <- Projects.update_project(project, project_params) do
+    with {:ok, %Project{} = project} <- Projects.update_project(project, project_param) do
       render(conn, "show.json", project: project)
     end
   end
 
   swagger_path :remove do
-    delete("/api/project/{project_id}")
+    delete("/api/project/{id}")
     summary("delete project")
     description("Delete project. This operation supports deleting")
     produces("application/json")
     tag("Project")
     operation_id("delete_project")
+    CommonParameters.authorization()
 
     parameters do
       id(:path, :string, "project ID", required: true)
     end
 
-    response(200, "OK", Schema.ref(:Project))
-    response(400, "Client Error")
+    response(204, "No Content")
+    response(400, "Bad Request")
   end
 
   def remove(conn, %{"id" => id}) do
+    [uid] = get_req_header(conn, "authorization")
     project = Projects.get_project!(id)
 
     with {:ok, %Project{}} <- Projects.delete_project(project) do
